--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="page-header">TO DO APP</div>
+
+
+    
+    
+    <div class="page-header">THE  DO-TODAY  APP</div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
